# my-commerce1-app

./: .gitignore  README.md  SETUP_GUIDE.md  build.sh  output.txt  pyproject.toml  render-build.sh  tatus
backend/: database.py  init_database.py  main.py  package.json  render.yaml  requirements.txt  start_server.bat  start_server.sh
frontend/: .gitignore  LICENSE  README.md  index.html  main.js  nodemon.json  package-lock.json  package.json  preload.js  tailwind.config.js  vite.config.ts
frontend/.github/workflows/: release.yml
frontend/public/: index.html  manifest.json
frontend/scripts/: build-installer.js
frontend/src/: App copy.jsx  App.css  App.jsx  App.test.jsx  index.css  index.jsx
frontend/src/components/: UpdateNotification.jsx  레이아웃.jsx  로그인.jsx  사이드바 copy.jsx  사이드바.jsx  서버상태.jsx  인증콜백.jsx  팝업창.jsx  플로팅버튼.jsx
frontend/src/pages/: NEIS출결.jsx  상품관리.jsx  세특AI.jsx  주문관리.jsx
frontend/src/supabase/: 인증.js  클라이언트.js
frontend/src/utils/: BrowserManager.js  CrawlingService.js  backend.js  로깅.js  상수.js  성능최적화.js
