[tool.poetry]
name = "my-commerce-app"
version = "0.1.0"
description = "해외구매대행 업무자동화 솔루션"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
uvicorn = "0.24.0"
gunicorn = "23.0.0"
python-dotenv = "1.1.1"
supabase = "2.17.0"
requests = "2.31.0"
psycopg2-binary = "2.9.9"
playwright = "1.40.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
